--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body class="bg-black">
-    <nav class="bg-gray-900 text-white sticky top-0 z-50">
+    <nav class="bg-blue-900 text-white sticky top-0 z-50">
         <div class="container mx-auto px-4 py-3 flex items-center justify-between">
             <!-- Logo -->
             <div class="text-xl font-bold">
@@ -117,7 +117,7 @@
             <div class="flex flex-wrap justify-center space-x-8">
                 <!-- Team Member 1 -->
                 <div class="w-full md:w-1/3 text-center mb-8" data-aos="fade-up" data-aos-delay="200">
-                    <img src="./img/mean.jpg" alt="Team Member" class="w-40 h-40 object-cover rounded-full mx-auto mb-4">
+                    <img src="./img/mean.png" alt="Team Member" class="w-40 h-40 object-cover rounded-full mx-auto mb-4">
                     <h3 class="text-2xl font-semibold mb-2">ញ៉ែម សុមាន | និសិត្សឆ្នាំទី២</h3>
                     <p class="mb-4">អ្នកបណ្តុះបណ្តាលកូដ</p>
                     <p>ញ៉ែម សុមាន គឺជាអ្នកអភិវឌ្ឍន៍វេបប្រចាំក្រុមយើង ដែលមានជំនាញកាន់តែច្រើនក្នុងការអភិវឌ្ឍន៍វេបសាយ និងការបណ្ដុះបណ្ដាល។</p>
@@ -209,7 +209,7 @@
     </div>
 </section>
 
-<section class="bg-gray-900 text-white py-12">
+<section class="bg-blue-900 text-white py-12">
     <div class="container mx-auto px-6 text-center md:text-left">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <!-- About Section -->
