--- a/course/c.html
+++ b/course/c.html
@@ -2541,27 +2541,27 @@ A នៅក្នុងតួអក្សរតូចគឺ: a
             <!-- About Section -->
             <div>
                 <h3 class="text-2xl font-semibold mb-4">អំពីយើង</h3>
-                <p class="text-gray-400 mb-4">CodeKhmerLearning ផ្តល់ឱ្យអ្នកនូវវគ្គសិក្សាពិសេសក្នុងការរៀនកូដភាសាខ្មែរ។ យើងមានក្រុមការងារព្រមមានជំនាញក្នុងការអភិវឌ្ឍកម្មវិធី និងវេបសាយ។</p>
-                <p class="text-gray-400">© 2025 CodeKhmerLearning. All Rights Reserved.</p>
+                <p class="text-white mb-4">CodeKhmerLearning ផ្តល់ឱ្យអ្នកនូវវគ្គសិក្សាពិសេសក្នុងការរៀនកូដភាសាខ្មែរ។ យើងមានក្រុមការងារព្រមមានជំនាញក្នុងការអភិវឌ្ឍកម្មវិធី និងវេបសាយ។</p>
+                <p class="text-white">© 2025 CodeKhmerLearning. All Rights Reserved.</p>
             </div>
 
             <!-- Quick Links Section -->
             <div>
                 <h3 class="text-2xl font-semibold mb-4">តំណភ្ជាប់រហ័ស</h3>
                 <ul>
-                    <li><a href="#home" class="text-gray-400 hover:text-white mb-2">ផ្ទាំងដើម</a></li>
-                    <li><a href="#courses" class="text-gray-400 hover:text-white mb-2">វគ្គសិក្សា</a></li>
-                    <li><a href="#about" class="text-gray-400 hover:text-white mb-2">អំពីយើង</a></li>
-                    <li><a href="#contact" class="text-gray-400 hover:text-white mb-2">ទំនាក់ទំនង</a></li>
+                    <li><a href="#home" class="text-white hover:text-white mb-2">ផ្ទាំងដើម</a></li>
+                    <li><a href="#courses" class="text-white hover:text-white mb-2">វគ្គសិក្សា</a></li>
+                    <li><a href="#about" class="text-white hover:text-white mb-2">អំពីយើង</a></li>
+                    <li><a href="#contact" class="text-white hover:text-white mb-2">ទំនាក់ទំនង</a></li>
                 </ul>
             </div>
 
             <!-- Contact & Social Section -->
             <div>
                 <h3 class="text-2xl font-semibold mb-4">ទំនាក់ទំនង</h3>
-                <p class="text-gray-400 mb-4">សូមទំនាក់ទំនងមកកាន់យើងក្តី:</p>
-                <p class="text-gray-400 mb-4">Email: info@codekhmer.com</p>
-                <p class="text-gray-400 mb-6">Phone: +855 123 456 789</p>
+                <p class="text-white mb-4">សូមទំនាក់ទំនងមកកាន់យើងក្តី:</p>
+                <p class="text-white mb-4">Email: info@codekhmer.com</p>
+                <p class="text-white mb-6">Phone: +855 123 456 789</p>
 
                 <!-- Social Media Icons -->
                 <div class="flex justify-center space-x-6">
@@ -2582,7 +2582,7 @@ A នៅក្នុងតួអក្សរតូចគឺ: a
         </div>
 
         <div class="text-center mt-8">
-            <p class="text-gray-400 text-sm">&copy; 2025 CodeKhmerLearning. All rights reserved.</p>
+            <p class="text-white text-sm">&copy; 2025 CodeKhmerLearning. All rights reserved.</p>
         </div>
     </div>
 </section>
